--- a/index.html
+++ b/index.html
@@ -334,10 +334,7 @@
                                     <option value="past">All Past Cases</option>
                                 </select>
                                 <select class="filter-select" id="dashboardCasesStatusFilter">
-                                    <option value="">All Status</option>
-                                    <option value="Scheduled">Scheduled</option>
-                                    <option value="Canceled">Canceled</option>
-                                    <option value="Complete">Complete</option>
+                                    <!-- Case status options populated dynamically by CaseStatus.populateCaseStatusDropdown() -->
                                 </select>
                             </div>
                         </div>
@@ -609,6 +606,10 @@
                     </h1>
                     <p class="page-subtitle">Manage physicians and their specialties</p>
                 </div>
+                <button class="btn-primary-custom" onclick="app.modalManager.showAddSurgeonModal()">
+                    <i class="fas fa-plus"></i>
+                    Add Physician
+                </button>
             </div>
 
             <!-- Physician Stats -->
@@ -1680,6 +1681,78 @@
 </div>
 
 
+<!-- Add Physician Modal -->
+<div class="modal fade" id="addPhysicianModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add New Physician</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <form id="addPhysicianForm">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="addPhysicianTitle" class="form-label">Title</label>
+                                <select class="form-control" id="addPhysicianTitle">
+                                    <option value="Dr.">Dr.</option>
+                                    <option value="Prof.">Prof.</option>
+                                    <option value="Prof. Dr.">Prof. Dr.</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="addPhysicianName" class="form-label">Full Name *</label>
+                                <input type="text" class="form-control" id="addPhysicianName" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="addPhysicianSpecialty" class="form-label">Specialty</label>
+                                <select class="form-control" id="addPhysicianSpecialty">
+                                    <option value="">Select Specialty...</option>
+                                    <option value="Orthopedic">Orthopedic Surgery</option>
+                                    <option value="Spine">Spine Surgery</option>
+                                    <option value="Neurosurgery">Neurosurgery</option>
+                                    <option value="Sports Medicine">Sports Medicine</option>
+                                    <option value="Minimally Invasive">Minimally Invasive Surgery</option>
+                                    <option value="General">General Surgery</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="addPhysicianHospital" class="form-label">Primary Hospital</label>
+                                <input type="text" class="form-control" id="addPhysicianHospital">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="addPhysicianEmail" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="addPhysicianEmail">
+                            </div>
+                            <div class="form-group">
+                                <label for="addPhysicianPhone" class="form-label">Phone Number</label>
+                                <input type="tel" class="form-control" id="addPhysicianPhone">
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="addPhysicianActive" checked>
+                                <label class="form-check-label" for="addPhysicianActive">
+                                    Active Physician
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="addPhysicianNotes" class="form-label">Notes</label>
+                        <textarea class="form-control" id="addPhysicianNotes" rows="2"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn-secondary-custom" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn-primary-custom" onclick="app.surgeonManager.addSurgeon()">Add Physician</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Edit Physician Modal -->
 <div class="modal fade" id="editPhysicianModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
@@ -1794,7 +1867,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn-secondary-custom" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn-primary-custom" onclick="app.surgeonManager.updatePhysician()">Update Physician</button>
+                <button type="button" class="btn-primary-custom" onclick="app.surgeonManager.updateSurgeon()">Update Physician</button>
             </div>
         </div>
     </div>
@@ -2110,9 +2183,7 @@
                             <div class="mb-3">
                                 <label for="editCaseStatus" class="form-label">Status</label>
                                 <select class="form-select" id="editCaseStatus">
-                                    <option value="Scheduled">Scheduled</option>
-                                    <option value="Canceled">Canceled</option>
-                                    <option value="Complete">Complete</option>
+                                    <!-- Case status options populated dynamically by CaseStatus.populateCaseStatusDropdown() -->
                                 </select>
                             </div>
                         </div>
